# TranslationVerification

./: .gitmodules  .nuspec  CMakeLists.txt  LICENSE  README.md  TranslationVerificationProject.pro  Translation_Verification_Start_Script.sh  translationVerification.desktop
.github/workflows/: build.yml
TranslationVerification/: CMakeLists.txt  TranslationVerification.pro  addlanguagedialog.cpp  addlanguagedialog.h  addlanguagedialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qonlinetranslator.pri  verification.cpp  verification.h  widgetwindow.cpp
TranslationVerification-Installer/: TranslationVerification-Installer.pro
TranslationVerification/TranslationVerification-Installer/config/: config.xml
fonts/: resources.qrc
src/: addlanguagedialog.cpp  addlanguagedialog.h  fontcombobox.cpp  fontcombobox.h  widgetwindow.cpp  widgetwindow.h  widgetwindow.ui
